--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-e700588d-df3b-4691-89be-22beb91de226;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
