--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-e700588d-df3b-4691-89be-22beb91de226;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "server=localhost;userid=developer;password=1234567;database=saleswebmvcappdb"
   }
 }
